<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                              https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.mankind</groupId>
  <artifactId>mankind-backend</artifactId>
  <version>1.0.0</version>
  <packaging>pom</packaging>
  <name>Mankind Backend Monorepo</name>
  <description>Multi-module Spring Boot backend for Mankind Matrix</description>
  <modules>
    <module>user-service</module>
    <module>product-service</module>
    <module>cart-service</module>
    <module>wishlist-service</module>
    <module>payment-service</module>
    <module>mankind-gateway-service</module>
    <module>notification-service</module>
    <!--  api modules -->
    <module>user-api</module>
    <module>product-api</module>

  </modules>
  <properties>
    <java.version>17</java.version>
    <spring.boot.version>3.4.4</spring.boot.version>
    <springframework.cloud.version>2024.0.1</springframework.cloud.version>
    <lombok.version>1.18.30</lombok.version>
    <springdoc.version>2.8.9</springdoc.version>
    <mapstruct.version>1.5.5.Final</mapstruct.version>
    <stripe.version>22.21.0</stripe.version>
  </properties>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring.boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.springframework.cloud</groupId>
        <artifactId>spring-cloud-dependencies</artifactId>
        <version>${springframework.cloud.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>com.mankind</groupId>
        <artifactId>user-api</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.mankind</groupId>
        <artifactId>product-api</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${lombok.version}</version>
        <scope>provided</scope>
      </dependency>
      <!-- SpringDoc OpenAPI Dependencies -->
      <dependency>
        <groupId>org.springdoc</groupId>
        <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
        <version>${springdoc.version}</version>
      </dependency>
      <!-- MapStruct Dependencies -->
      <dependency>
        <groupId>org.mapstruct</groupId>
        <artifactId>mapstruct</artifactId>
        <version>${mapstruct.version}</version>
      </dependency>
      <dependency>
        <groupId>org.mapstruct</groupId>
        <artifactId>mapstruct-processor</artifactId>
        <version>${mapstruct.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>com.stripe</groupId>
        <artifactId>stripe-java</artifactId>
        <version>${stripe.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-maven-plugin</artifactId>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.11.0</version>
          <configuration>
            <source>${java.version}</source>
            <target>${java.version}</target>
            <parameters>true</parameters>
            <annotationProcessorPaths>
              <path>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
              </path>
            </annotationProcessorPaths>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
